--- a/git2.html
+++ b/git2.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+
+<body>it
+     has been merged successfully as shown here . now go ahead with this feature and rock ...
+
     
 </body>
 </html>
