--- a/git2.html
+++ b/git2.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>it
-     has been merged successfully as shown here . now go ahead with this feature and rock ...
+leave this sit lettery i dont have idea why i m doing that seriously bullshit man 
 
     
 </body>
